Fixed header position

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>ideaBox</title>
+    <title>ideabox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header>
-      <h1 class="idea"><span>idea</span>Box</h1>
+    <header class="top-box">
+      <h1> <span class="idea">idea</span>box</h1>
     </header>
     <section class="container box">
       <article class="top-box">
