Add strikeComplete func

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
       </article>
       <form class ="search">
-        <input id="search-input" type="search" placeholder="Search">
+        <input id="search-input" type="textarea" placeholder="Search">
       </form>
       <article class="bottom-box" role="feed"></article>
     </section>
